--- a/BasicTest/packages.config
+++ b/BasicTest/packages.config
@@ -2,4 +2,18 @@
 <packages>
   <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net461" />
+  <package id="NUnit" version="3.10.1" targetFramework="net461" />
+  <package id="NUnit.ConsoleRunner" version="3.8.0" targetFramework="net461" />
+  <package id="NUnit.Extension.NUnitProjectLoader" version="3.5.0" targetFramework="net461" />
+  <package id="NUnit.Extension.NUnitV2Driver" version="3.6.0" targetFramework="net461" />
+  <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.5.0" targetFramework="net461" />
+  <package id="NUnit.Extension.TeamCityEventListener" version="1.0.3" targetFramework="net461" />
+  <package id="NUnit.Extension.VSProjectLoader" version="3.7.0" targetFramework="net461" />
+  <package id="NUnit.Runners" version="3.8.0" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.10.0" targetFramework="net461" />
+  <package id="NUnitTestAdapter" version="2.1.1" targetFramework="net461" />
+  <package id="Selenium.Chrome.WebDriver" version="2.38" targetFramework="net461" />
+  <package id="Selenium.Support" version="3.12.0" targetFramework="net461" />
+  <package id="Selenium.WebDriver" version="3.12.0" targetFramework="net461" />
+  <package id="WebDriverChromeDriver" version="2.10" targetFramework="net461" />
 </packages>
